# VistaFormer

./: .gitignore  .python-version  README.md  pyproject.toml  requirements.txt  singularity.def
configs/mtlcc/: vistaformer.yaml
configs/pastis/: vistaformer.yaml  vistaformer_fold1.yaml  vistaformer_fold2.yaml  vistaformer_fold3.yaml  vistaformer_fold4.yaml  vistaformer_fold5.yaml
notebooks/: inference.ipynb  model_analysis.ipynb
slurm/: requirements.txt  run.sh
vistaformer/: config.py  loss.py
vistaformer/datasets/: README.md  __init__.py
vistaformer/datasets/mtlcc/: create_samples.py  dataloader.py  transforms.py
vistaformer/datasets/pastis/: create_samples.py  dataloader.py  transforms.py
vistaformer/models/: __init__.py  backbone.py  head.py  layers.py  vistaformer.py  vistaformer_multi.py  vistaformer_neighbourhood.py
vistaformer/train_and_evaluate/: eval_utils.py  train.py  train_segmentation.py  utils.py
