[tool.poetry]
name = "vistaformer"
version = "0.1.0"
description = ""
authors = ["ezrajames <macdonaldezra@gmail.com>"]
readme = "README.md"
packages = [{ include = "vistaformer" }]

[tool.poetry.dependencies]
python = "^3.9"
openmim = "^0.3.9"
torch = "^1.13"
ftfy = "^6.1.3"
regex = "^2023.10.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
notebook = "^7.0.6"
albumentations = "^1.3.1"
pytorch-lightning = "^2.1.3"
"ruamel.yaml" = "^0.18.5"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipywidgets = "^8.1.1"
flake8 = "^6.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
