[tool.poetry]
name = "vistaformer"
version = "0.1.0"
description = ""
authors = ["anon <redacted@gmail.com>"]
readme = "README.md"
packages = [{ include = "vistaformer" }]

[tool.poetry.dependencies]
python = "^3.9"
timm = "^0.9.2"
torch = "^1.13"
torchmetrics = "^1.2.1"
tensorboard = "^2.14.0"
ftfy = "^6.1.3"
regex = "^2023.10.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
notebook = "^7.0.6"
"ruamel.yaml" = "^0.18.5"
wandb = "^0.16.5"
pydantic = "^1.10.13"
geopandas = "^0.14.4"
fvcore = "^0.1.5.post20221221"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipywidgets = "^8.1.1"
flake8 = "^6.1.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
